# fux_delaunay-rs

./: .gitignore  Cargo.toml  README.md
fux_delaunay_c_api/: Cargo.toml  input_points3_from_c.json  input_points_from_c.json
fux_delaunay_c_api/src/: api.c  fux_delaunay_c_api.h  lib.rs
fux_delaunay_c_api_tester/: Cargo.toml  build.rs
fux_delaunay_c_api_tester/src/: api.c  api.h  lib.rs
src/: lib.rs
src/algorithms/: element_locators.rs  lawson_flipping.rs
src/algorithms2/: element_locators.rs  lawson_flipping.rs  mod.rs
src/algorithms3/: convex_hull.rs  element_locators.rs  mod.rs  sort_3.rs
src/c_api/: api2.rs  api3.rs  mod.rs
src/io/: abaqus_2d_read.rs  abaqus_2d_write.rs  abaqus_3d_read.rs  abaqus_3d_write.rs  abaqus_read.rs  abaqus_write.rs  mod.rs
src/math/: circumcircle_side.rs  circumsphere_side.rs  distance.rs  f64_err.rs  mod.rs  order_float.rs  point_on_which_line_side.rs  point_on_which_plane_side.rs  round.rs  side_of_line.rs  side_of_plane.rs
src/primitives/: mod.rs
src/types/: fp.rs  mod.rs  n2_index.rs  n3_index.rs  node_index.rs  point2.rs  point3.rs  point3_err.rs  t3_index.rs  t4_index.rs  triangle.rs  triangle_index.rs  triangulation.rs  triangulation_neighborhood.rs
src/types/tetrahedron/: mod.rs  tetrahedron.rs  (+1 more)
tests/: neighborhood.rs  test_based_on_json_serialized_points.rs  test_based_on_json_serialized_points3.rs  trivial_tests.rs  trivial_tests3.rs
tests/data/: 300x300_truktura_500.json  data_100X100X100.json  trivial.inp  trivial.txt
tests/tests_results/: trivial_tests_1.inp  trivial_tests_2.inp  trivial_tests_3.inp
(+20 files in other folders)
